--- a/07_refs/p-value.bib
+++ b/07_refs/p-value.bib
@@ -124,6 +124,27 @@
   file = {/Users/javiermtz/Zotero/storage/2XG9ZRPI/pval-litany.html}
 }
 
+@article{Nuzzo:2014,
+  title = {Scientific Method: {{Statistical}} Errors},
+  shorttitle = {Scientific Method},
+  author = {Nuzzo, Regina},
+  year = {2014},
+  month = feb,
+  journal = {Nature},
+  volume = {506},
+  number = {7487},
+  pages = {150--152},
+  publisher = {Nature Publishing Group},
+  issn = {1476-4687},
+  doi = {10.1038/506150a},
+  urldate = {2024-03-19},
+  abstract = {P values, the 'gold standard' of statistical validity, are not as reliable as many scientists assume.},
+  copyright = {2014 Springer Nature Limited},
+  langid = {english},
+  keywords = {Lab life,Mathematics and computing,Medical research,Publishing},
+  file = {/Users/javiermtz/Zotero/storage/7PNWBME6/506150a.html}
+}
+
 @article{Oscbtec:2019,
   title = {Open Science Challenges, Benefits and Tips in Early Career and Beyond},
   year = {2019},
