--- a/07_refs/p-value.bib
+++ b/07_refs/p-value.bib
@@ -124,6 +124,18 @@
   file = {/Users/javiermtz/Zotero/storage/2XG9ZRPI/pval-litany.html}
 }
 
+@misc{iRF1:1913,
+  title = {An Image of {{Ronald Fisher}} in 1913},
+  shorttitle = {File},
+  year = {1913},
+  month = jan,
+  journal = {Wikipedia},
+  urldate = {2024-03-19},
+  howpublished = {https://commons.wikimedia.org/wiki/File:Youngronaldfisher2.JPG},
+  langid = {english},
+  file = {/Users/javiermtz/Zotero/storage/R3IXSBSL/FileYoungronaldfisher2.html}
+}
+
 @article{Nuzzo:2014,
   title = {Scientific Method: {{Statistical}} Errors},
   shorttitle = {Scientific Method},
